--- a/views/base.html
+++ b/views/base.html
@@ -90,16 +90,8 @@
   </script>
 
 
-<script type="text/javascript" src="./src/simplyScroll/jquery.simplyscroll.js"></script>
-<link rel="stylesheet" href="./src/simplyScroll/jquery.simplyscroll.css" media="all" 
+<link rel="stylesheet" href="/src/simplyScroll/jquery.simplyscroll.css" media="all" 
 type="text/css">
-<script type="text/javascript">
-  (function($) {
-    $(function() {
-      $("#scroller").simplyScroll();
-    });
-  })(jQuery);
-</script>
 
 
   <!-- import the webpage's stylesheet -->
@@ -291,6 +283,7 @@ type="text/css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.8/dist/semantic.min.js"></script>
   <script src="script.js"></script>
+  <script type="text/javascript" src="/src/simplyScroll/jquery.simplyscroll.js"></script>
 
 
   {% block localScript %}
