--- a/views/index.html
+++ b/views/index.html
@@ -160,7 +160,7 @@ transform: rotate(-180deg); height: 500vh'>
             <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
               <img src="img/home/0.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
               더하는 AI Human">
-              <div class="card-img-overlay container c3-img d-flex flex-column h-100 p-4">
+              <div class="card-img-overlay container c3-img d-flex flex-column h-100 p-4 rounded-0">
                 <div class="row g-0 h-100">
                   <div class="col-7 d-flex flex-column ">
                     <p class=" c3-title Title_1_eng mb-0 gray_0">비즈니스에 가능성을
