--- a/views/base.html
+++ b/views/base.html
@@ -9,6 +9,7 @@
   <meta name="generator" content="Jekyll v4.1.1" />
   <meta property="og:title" content="(주)씨앤에이아이" />
   <meta property="og:description" content="Change for New Normal" />
+  <meta property="og:image" content="img/common/og.jpeg" />
   <meta name="twitter:image" content="./img/common/og.jpeg" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="(주)씨앤에이아" />
@@ -17,19 +18,20 @@
 
 
 
-  <title>CNAI</title>
+  <title>{{ title }} CNAI</title>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+    integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+    integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+    crossorigin="anonymous"></script>
 
 
-<!-- https://swiperjs.com/demos -->
-   <link
-   rel="stylesheet"
-   href="https://unpkg.com/swiper/swiper-bundle.min.css"
- />
+  <!-- https://swiperjs.com/demos -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
 
 
@@ -40,7 +42,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
 
@@ -59,9 +62,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Nanum+Myeongjo:wght@400;700;800&display=swap"
     rel="stylesheet">
 
-    <link href="//db.onlinewebfonts.com/c/67680f2eb947c5cbd58b40961b4a61e9?family=Apple+SD+Gothic+Neo" rel="stylesheet" type="text/css"/>
-<!-- AOS -->
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="//db.onlinewebfonts.com/c/67680f2eb947c5cbd58b40961b4a61e9?family=Apple+SD+Gothic+Neo" rel="stylesheet"
+    type="text/css" />
+  <!-- AOS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
 
@@ -90,149 +94,189 @@
   </script>
 
 
-<link rel="stylesheet" href="/src/simplyScroll/jquery.simplyscroll.css" media="all" 
-type="text/css">
+  <link rel="stylesheet" href="/src/simplyScroll/jquery.simplyscroll.css" media="all" type="text/css">
 
 
   <!-- import the webpage's stylesheet -->
   <link rel="stylesheet" href="./css/style.css" />
 
 </head>
-<body class="d-flex flex-column h-100 " >
 
-<!-- Following Menu -->
+<body class="d-flex flex-column h-100 ">
+
+  <!-- Following Menu -->
 
 
 
-    <main role="main" class="flex-shrink-0 ">
+  <main role="main" class="flex-shrink-0 ">
 
-        <section class="bg-light ui large top fixed menu transition hidden" id="header_light" >
-        <div class="container ">
-          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-              <img class = "logo" src="./img/common/CNAI(white).png" width = "15%"> CNAI
-            </a>
-      
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="/company" class="nav-link px-2 text-secondary">COMPANY</a></li>
-              <li><a href="/community" class="nav-link px-2 text-white">COMMUNITY</a></li>
-              <li><a href="/career" class="nav-link px-2 text-white">CAREER</a></li>
-            </ul>
-      
-      
-            <div class="text-end">
-              <a><i class="globe icon"></i></a>
-              <button type="button" class="btn btn-outline-light me-2">CONTACT US</button>
-            </div>
+    <section class="bg-light ui large top fixed menu transition hidden" id="header_light">
+      <div class="container ">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+          <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+            <img class="logo" src="./img/common/CNAI(white).png" width="15%"> CNAI
+          </a>
+
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="/company" class="nav-link px-2 text-secondary">COMPANY</a></li>
+            <li><a href="/community" class="nav-link px-2 text-white">COMMUNITY</a></li>
+            <li><a href="/career" class="nav-link px-2 text-white">CAREER</a></li>
+          </ul>
+
+
+          <div class="text-end">
+            <a><i class="globe icon"></i></a>
+            <button type="button" class="btn btn-outline-light me-2">CONTACT US</button>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
 
-<!-- 최상단 헤더 -->
-<header class="bg-dark Gray_5 menu py-2" id = 'headr_dark' style = 'height:4vw;'>
 
-  <div class="container ">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-decoration-none">
-        <img class = "logo" src="./img/common/CNAI(white).png" width = "70px">
-      </a>
-      <div class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 Body_2_eng" id = 'gnb-dark'>
-        <li class="my-auto px-5"><a href="/company" class="nav-link px-2 Gray_5 hover-underline-animation">COMPANY</a></li>
-        
-          <div class="ui compact menu my-auto pr-5" style="
-          background: none;
-      ">
-            <div class="ui simple dropdown item Gray_5 Body_2_eng" id = 'moveArrow'>
-         COMMUNITY
-         <i class="angle down icon" id = 'myArrow'></i>
-              <div class="menu">
-                <div class="item"><a href = '/community'>Publications</a></div>
-                <div class="item">Tech Blog<i class="external alternate icon"></i></div>           
+
+
+    <!-- 최상단 헤더 -->
+
+
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="최상단 메뉴">
+      <div class="container">
+        <a class="navbar-brand col-1 mb-2" href="/"> <img class="" src="./img/common/CNAI(white).png" width = '80px'></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#gnb"
+          aria-controls="gnb" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="gnb">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 Body_2_eng">
+            <li class="nav-item my-auto lineOn">
+              <a class="nav-link text-uppercase Gray_5" href="/company">company</a>
+            </li>
+            
+            <li class="nav-item my-auto lineOn">
+              <a class="nav-link text-uppercase Gray_5" href="/community">COMMUNITY</a>
+            </li> 
+            <div class="dropdown-content">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
+            </div>
+
+            <li class="nav-item my-auto lineOn">
+              <a class="nav-link text-uppercase Gray_5" aria-current="page" href="/career">career</a>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-bs-toggle="dropdown"
+                aria-expanded="false">Dropdown</a>
+              <ul class="dropdown-menu dropdown-menu dropdown-content" aria-labelledby="dropdown07">
+                <li><a class="dropdown-item" href="/community">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+          
+          <li class="nav-item my-auto lineOn navbar-nav"> <a href='/en' class='nav-link'><i class="globe icon text-white"></i></a> </li>
+          
+          <button type="button" class="nav-item btn btn-outline-light me-2 Gray_5 ms-5">CONTACT US</button>
+        </div>
+      </div>
+    </nav>
+
+    <!-- <header class="bg-dark  menu py-2" id='headr_dark' style='height:4vw;'>
+
+      <div class="container ">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+          <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-decoration-none">
+            <img class="logo" src="./img/common/CNAI(white).png" width="70px">
+          </a>
+          <div class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 Body_2_eng" id='gnb-dark'>
+            <li class="my-auto px-5"><a href="/company"
+                class="nav-link px-2 Gray_5 lineOn">COMPANY</a></li>
+
+          
+            <li class='my-auto'><a href="/career" class="nav-link px-2 Gray_5 Body_2_eng">CAREER</a></li>
+          </div>
+          <div class="text-end">
+
+          </div>
+        </div>
+      </div>
+    </header> -->
+
+    {% block content %} {% endblock %}
+
+
+    <section class="py-5 text-center container-fluid text-light" id="btn-career"
+      style="height: 38vh;background: linear-gradient(180deg, #7E53FF -8.57%, rgba(126, 83, 255, 0) 46.58%), #5A54F5;">
+      <div style="margin-top:5vh" data-aos="fade-up" class="aos-init aos-animate">
+        <!-- position-absolute 쓰면 fade up 불가 -->
+        <h1>{% block title %} {% endblock %} </h1>
+        <div class="ui button">{% block btn %} {% endblock %}</div>
+      </div>
+    </section>
+  </main>
+
+
+
+  <!-- Footer -->
+
+  <footer class="ui  vertical footer mt-auto segment " style='height: 80vh; background-color: #F2F5F8;'>
+    <div class=" container">
+      <div class="row Body_2_eng Gray_1" style="margin-top: 6rem;">
+        <div class='col-8'>
+          <div class='row'>
+            <div class="col-2">
+              <h4 class="">Core Tech</h4>
+              <div class="ui  link list">
+                <a href="#" class="item lh-lg">Data Warehouse </a>
+                <a href="#" class="item lh-lg"> Synthetic Data</a>
+                <a href="#" class="item lh-lg"> AI Human</a>
+
               </div>
             </div>
-          </div>             
-        <li class = 'my-auto'><a href="/career" class="nav-link px-2 Gray_5 Body_2_eng">CAREER</a></li>
-        </div>
-      <div class="text-end">
-        <a href = '/en' class  = 'nav-link hover-underline-animation'><i class="globe icon px-5 text-white"></i></a>
-        <button type="button" class="btn btn-outline-light me-2 Gray_5 ">CONTACT US</button>
-      </div>
-    </div>
-  </div>
-</header>
-
-{% block content %} {% endblock %}
-
-
-<section class="py-5 text-center container-fluid text-light" id="btn-career"
-  style="height: 38vh;background: linear-gradient(180deg, #7E53FF -8.57%, rgba(126, 83, 255, 0) 46.58%), #5A54F5;">
-  <div style="margin-top:5vh" data-aos="fade-up" class="aos-init aos-animate">
-    <!-- position-absolute 쓰면 fade up 불가 -->
-    <h1>{% block title %} {% endblock %} </h1>
-    <div class="ui button">{% block btn %} {% endblock %}</div>
-  </div>
-</section>
-</main>
-
-
-
-<!-- Footer -->
-
-<footer class="ui  vertical footer mt-auto segment " style = 'height: 80vh; background-color: #F2F5F8;'>
-    <div class=" container">
-      <div class="row Body_2_eng Gray_1" style = "margin-top: 6rem;">
-        <div class = 'col-8'>
-          <div class = 'row'>
-        <div class="col-2">
-          <h4 class="">Core Tech</h4>
-          <div class="ui  link list">
-            <a href="#" class="item lh-lg">Data Warehouse </a>
-            <a href="#" class="item lh-lg"> Synthetic Data</a>
-            <a href="#" class="item lh-lg"> AI Human</a>
-
+            <div class="col-2">
+              <h4 class="">Company</h4>
+              <div class="ui link list">
+                <a class="item lh-lg" href="#">Our Core Value</a>
+                <a class="item lh-lg" href="#"> Our Journey</a>
+                <a class="item lh-lg" href="#"> Media Kit</a>
+                <a class="item lh-lg" href="#"> Contact Us</a>
+              </div>
+            </div>
+            <div class="col-2">
+              <h4 class="">Career</h4>
+              <div class="ui link list">
+                <a class="item lh-lg" href="#">Our Value</a>
+                <a class="item lh-lg" href="#"> CN.AI Team</a>
+                <a class="item lh-lg" href="#"> Recruit</a>
+              </div>
+            </div>
+            <div class="col-2">
+              <h4 class="">Community</h4>
+              <div class="ui link list">
+                <a class="item lh-lg" href="#">Recent News</a>
+                <a class="item lh-lg" href="#">Investment</a>
+                <a class="item lh-lg" href="#">Tech Blog</a>
+              </div>
+            </div>
+            <div class="col-2">
+              <h4 class="">Contact us</h4>
+              <div class="ui link list">
+                <a class="item lh-lg footer-text" href="#">사업 제휴</a>
+                <a class="item lh-lg  footer-text" href="#">마케팅·PR</a>
+                <a class="item lh-lg  footer-text" href="#">IR</a>
+                <a class="item lh-lg footer-text" href="#">오시는 길 </a>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-2">
-          <h4 class="">Company</h4>
-          <div class="ui link list">
-            <a class="item lh-lg" href="#">Our Core Value</a>
-            <a class="item lh-lg" href="#"> Our Journey</a>
-            <a class="item lh-lg" href="#"> Media Kit</a>
-            <a class="item lh-lg" href="#"> Contact Us</a>
-          </div>
-        </div>
-        <div class="col-2">
-          <h4 class="">Career</h4>
-          <div class="ui link list">
-            <a class="item lh-lg" href="#">Our Value</a>
-            <a class="item lh-lg" href="#"> CN.AI Team</a>
-            <a class="item lh-lg" href="#"> Recruit</a>
-          </div>
-        </div>
-        <div class="col-2">
-          <h4 class="">Community</h4>
-          <div class="ui link list">
-            <a class="item lh-lg" href="#">Recent News</a>
-            <a class="item lh-lg" href="#">Investment</a>
-            <a class="item lh-lg" href="#">Tech Blog</a>
-          </div>
-        </div>
-        <div class="col-2">
-          <h4 class="">Contact us</h4>
-          <div class="ui link list">
-            <a class="item lh-lg footer-text" href="#">사업 제휴</a>
-            <a class="item lh-lg  footer-text" href="#">마케팅·PR</a>
-            <a class="item lh-lg  footer-text" href="#">IR</a>
-            <a class="item lh-lg footer-text" href="#">오시는 길 </a>
-          </div>
-        </div>
-      </div>
-</div>
-<div class ='col-4 Body_2_eng Gray_1'>
+        <div class='col-4 Body_2_eng Gray_1'>
 
 
-          <div class = 'channel'>
+          <div class='channel'>
             <h4 class="">Channel</h4>
 
             <button class="ui circular facebook icon button">
@@ -251,13 +295,13 @@ type="text/css">
 
           </div>
           <p class="my-5 pt-3">Media Kit</p>
-          <button class = 'ui button'>C.I Download</button>
-          
-        
+          <button class='ui button'>C.I Download</button>
+
+
         </div>
       </div>
 
-      <div class="ui horizontal inverted small divided link list" style = "margin-top: 5rem; font-family: 'Apple SD Gothic Neo';
+      <div class="ui horizontal inverted small divided link list" style="margin-top: 5rem; font-family: 'Apple SD Gothic Neo';
       font-style: normal;
       font-weight: 700;
       font-size: 0.9rem;
@@ -273,10 +317,10 @@ type="text/css">
     </div>
   </footer>
 
-   <!-- Swiper JS -->
-   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <!-- Swiper JS -->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-   <!-- Initialize Swiper -->
+  <!-- Initialize Swiper -->
 
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -287,7 +331,7 @@ type="text/css">
 
 
   {% block localScript %}
-  
+
   {% endblock %}
 
 
