--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@
 }
 
 .dropdown-content {
-  display: none;
+  /* display: none; */
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
@@ -27,7 +27,7 @@
 
 .dropdown-content a:hover {background-color: #ddd;}
 
-.dropdown:hover .dropdown-content {display: block;}
+/* .dropdown:hover .dropdown-content {display: block;} */
 
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
