--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,33 +4,6 @@
 }
 
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  /* display: none; */
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-/* .dropdown:hover .dropdown-content {display: block;} */
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-
 .full-width {
   width: 100vw;
   position: relative;
@@ -76,7 +49,7 @@ html {
 @import "//cdn.jsdelivr.net/npm/font-applesdgothicneo@1.0/all.min.css";
 
 .en {
-  font-family: 'made-tommy'
+  font-family: 'made-tommy' !important;
 }
 
 .lineOn {
@@ -98,7 +71,8 @@ html {
   width: 100%;
   transform: scaleX(0);
   height: 2px;
-  bottom: -0.9rem;
+  /* bottom: -0.9rem; */
+  bottom: -117%;
   /* top: 120%; */
   left: 0;
   background-color: white;
@@ -321,6 +295,9 @@ padding-left: 1rem; */
 }
 .Gray_0 {
   color: #363D47 !important;
+}
+.bgGray0{
+  background-color: #363D47 !important;
 }
 .gray_0 {
   color: #363D47;
